fixed overlapping content

--- a/src/app/components/Footer/Footer.scss
+++ b/src/app/components/Footer/Footer.scss
@@ -3,12 +3,12 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
   padding-inline: $main-padding-mobile-inline;
-  padding-bottom: 1rem;
+  padding-block: 1rem;
 
   @media (min-width: $tablet-breakpoint) {
     padding-inline: $main-padding-desktop-inline;
