--- a/src/app/components/Testimonial/Testimonial.scss
+++ b/src/app/components/Testimonial/Testimonial.scss
@@ -38,6 +38,7 @@
   .slider-wrapper {
     position: relative;
     width: 100%;
+    border: 1px solid gray;
 
     ul {
       padding-left: 0;
